--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gatsby-plugin-react-helmet": "^4.4.0",
     "gatsby-plugin-sharp": "^3.4.1",
     "gatsby-source-filesystem": "^3.4.0",
+    "gatsby-transformer-json": "^3.7.1",
     "gatsby-transformer-sharp": "^3.4.0",
     "react": "^17.0.1",
     "react-animate-on-scroll": "^2.1.5",
