--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -1,14 +1,24 @@
 [
   {
     "description": "Malai Herbal is a B2C eCommerce that was build using the static site generator Gatsby in combination with Netlify CMS and AWS's cloud infrastructure. Products are fully manageable using the protected CMS which will be sourced by Gatsby with zero downtime.",
-    "image": "../images/projects/malaiherbal.png",
+    "mainImage": "../images/projects/malaiherbal.png",
+    "images": [
+      "../images/projects/malaiherbal.png",
+      "../images/projects/malaiherbal/pdp.png",
+      "../images/projects/malaiherbal/checkout.png"
+    ],
     "link": "https://malaiherbal.com/",
     "title": "Malai Herbal",
     "stack": ["Gatsby", "Netlify", "Netlify CMS", "AWS Lambda", "DynamoDB"]
   },
   {
     "description": "The to-do application was built with the intention to learn Angular, Material UI TypeScript, RxJs and utilize a JAMStack architecture and services. The app integrates a fully functioning database with CRUD operations and auth system using serverless functons.",
-    "image": "../images/projects/todo-app.png",
+    "mainImage": "../images/projects/todo-app/overview.png",
+    "images": [
+      "../images/projects/todo-app/overview.png",
+      "../images/projects/todo-app/login.png",
+      "../images/projects/todo-app/add-todo.png"
+    ],
     "link": "https://angular-jamstack-todo.netlify.app/",
     "title": "JAMStack To-do Application",
     "stack": [
@@ -24,14 +34,19 @@
   },
   {
     "description": "Monify is an expense tracker Electron application that started as a side-project to learn more about native App Development. Currently, the app works with macOS and Windows. To get familiar with cross-platform development for mobile apps, I have utilized Flutter in a different project which can be found <a class='underline' href='https://play.google.com/store/apps/details?id=com.winter.random_word_generator' rel='noopener noreferrer' target='blank'>in the Google Play Store</a>.",
-    "image": "../images/projects/monify.png",
+    "mainImage": "../images/projects/monify.png",
     "link": "https://monify.netlify.app",
     "title": "Monify",
     "stack": ["Electron", "Flutter", "Dart", "SQLite"]
   },
   {
     "description": "HowToWebDev is a side-project that started with the idea in mind of getting familiar with static site generation, server-side rendering, and CD/CI. The blog is built utilizing React, Gatsby, Jest, and Jenkins. New articles are being released by creating markdown files and pushing them to the GitHub Repo.",
-    "image": "../images/projects/howtowebdev.png",
+    "mainImage": "../images/projects/howtowebdev.png",
+    "images": [
+      "../images/projects/howtowebdev.png",
+      "../images/projects/howtowebdev/overview.png",
+      "../images/projects/howtowebdev/article.png"
+    ],
     "link": "https://howtowebdev.netlify.app/",
     "title": "HowToWebDev",
     "stack": ["React", "Gatsby", "Jest", "Jenkins", "Markdown"]
