--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@svgr/webpack": "^5.5.0",
     "autoprefixer": "^10.2.5",
     "gatsby": "^3.4.1",
     "gatsby-plugin-google-fonts": "^1.0.1",
@@ -24,6 +25,7 @@
     "gatsby-plugin-postcss": "^4.4.0",
     "gatsby-plugin-react-helmet": "^4.4.0",
     "gatsby-plugin-sharp": "^3.4.1",
+    "gatsby-plugin-svgr": "^3.0.0-beta.0",
     "gatsby-source-filesystem": "^3.4.0",
     "gatsby-transformer-json": "^3.7.1",
     "gatsby-transformer-sharp": "^3.4.0",
