--- a/package.json
+++ b/package.json
@@ -14,25 +14,32 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
-    "@svgr/webpack": "^5.5.0",
-    "autoprefixer": "^10.2.5",
-    "gatsby": "^3.4.1",
+    "@svgr/webpack": "^6.5.1",
+    "autoprefixer": "^10.4.13",
+    "gatsby": "^5.3.2",
     "gatsby-plugin-google-fonts": "^1.0.1",
-    "gatsby-plugin-google-gtag": "^3.14.0",
-    "gatsby-plugin-image": "^1.4.0",
-    "gatsby-plugin-manifest": "^3.4.0",
+    "gatsby-plugin-google-gtag": "^5.3.0",
+    "gatsby-plugin-image": "^3.3.2",
+    "gatsby-plugin-manifest": "^5.3.1",
     "gatsby-plugin-portal": "^1.0.7",
-    "gatsby-plugin-postcss": "^4.4.0",
-    "gatsby-plugin-react-helmet": "^4.4.0",
-    "gatsby-plugin-sharp": "^3.4.1",
+    "gatsby-plugin-postcss": "^6.3.0",
+    "gatsby-plugin-react-helmet": "^6.3.0",
+    "gatsby-plugin-sharp": "^5.3.2",
     "gatsby-plugin-svgr": "^3.0.0-beta.0",
-    "gatsby-source-filesystem": "^3.4.0",
-    "gatsby-transformer-json": "^3.7.1",
-    "gatsby-transformer-sharp": "^3.4.0",
-    "react": "^17.0.1",
+    "gatsby-source-filesystem": "^5.3.1",
+    "gatsby-transformer-json": "^5.3.0",
+    "gatsby-transformer-sharp": "^5.3.1",
+    "react": "^18.2.0",
     "react-animate-on-scroll": "^2.1.5",
-    "react-dom": "^17.0.1",
+    "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "tailwindcss": "^2.1.2"
+  },
+  "overrides": {
+    "gatsby": "^5.3.2",
+    "react": "^18.2.0"
+  },
+  "devDependencies": {
+    "prettier": "^2.8.1"
   }
 }
